[tool.poetry]
name = "pagingtest"
version = "0.1.0"
description = "Testing paging on top of the Aiven API"
authors = ["Ari-Pekka Repo <aprepo@aiven.io>"]
license = "Public Domain"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
requests = "^2.25.1"
uvicorn = "^0.13.4"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
